자바 버전 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     group:
       "prod": "default, prod"
       "dev": "default, dev"
-    active: dev
+    default:  prod
   application:
     name: every
 server:
