--- a/application.yaml
+++ b/application.yaml
@@ -28,7 +28,7 @@ spec:
       volumes:
         - name: logging-volume
           hostPath:
-            path: ~/appLog
+            path: /home/ubuntu/appLog
             type: Directory
       imagePullSecrets:
         - name: registry-credential
