미사용 설정 삭제

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,8 @@
 spring.config.activate.on-profile: dev
+logging.level.root : debug
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: "jdbc:postgresql://localhost:54325/postgres"
     username: postgres
     password: everyDB
-#    url: "jdbc:postgresql://pythadata.iptime.org:54325/dongjak"
-#    username: pytha
-#    password: pytha!23$
