타임리프 기본설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     default:  prod
   application:
     name: every
+  thymeleaf:
+    prefix: "classpath:/templates/"
+    suffix: ".html"
 server:
   port: 8082
 
