Spring AI 테스트 코드 및 kubernetes 환경설정 주입 추가

--- a/application.yaml
+++ b/application.yaml
@@ -25,6 +25,9 @@ spec:
           volumeMounts:
             - mountPath: /logs
               name: logging-volume
+          envFrom:
+            - configMapRef:
+                name: everymap-configmap
       volumes:
         - name: logging-volume
           hostPath:
