--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,27 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven{ url 'https://repo.spring.io/milestone'}
+	maven{ url 'https://repo.spring.io/snapshot'}
 }
 
+
+dependencyLocking {
+	dependencies {
+		//implementation platform("org.springframework.ai:spring-ai-bom:0.8.1-SNAPSHOT")
+		implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
+	}
+}
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	implementation 'com.github.mwiede:jsch:0.2.19'
+
+	//implementation 'org.springframework.ai:spring-ai-openai:1.0.0-SNAPSHOT'
+	implementation 'org.springframework.ai:spring-ai-azure-openai-spring-boot-starter'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
