--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,9 +2,9 @@ spring.config.activate.on-profile: prod
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: "jdbc:postgresql://192.168.0.103:5432/postgres"
-    username: postgres
-    password: everyDB
+    url: ${DATASOURCE_URL}
+    username: ${postgres}
+    password: ${everyDB}
 
 
 logging.level.root : info
