--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,15 @@ spring:
   thymeleaf:
     prefix: "classpath:/templates/"
     suffix: ".html"
+  ai:
+    azure:
+      openai:
+        api-key: ${AI_API_KEY}
+        endpoint: ${AI_API_ENDPOINT}
+        chat:
+          options:
+            deployment-name: gpt35-turbo
+
 server:
   port: 8082
 
