feat: OpenAI 기반 경로정보 요약 API 기본기능 구현

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,11 +9,12 @@ spring:
   ai:
     azure:
       openai:
-        api-key: ${AI_API_KEY}
-        endpoint: ${AI_API_ENDPOINT}
+        api-key: ${SPRING_AI_AZURE_OPENAI_API_KEY}
+        endpoint: ${SPRING_AI_AZURE_OPENAI_ENDPOINT}
         chat:
           options:
-            deployment-name: gpt35-turbo
+            deployment-name: ${SPRING_AI_AZURE_OPENAI_DEPLOYMENT_NAME}
+            model-name: ${SPRING_AI_AZURE_OPENAI_MODEL_NAME}
 
 app:
   vworld:
