--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	//implementation 'org.springframework.ai:spring-ai-openai:1.0.0-SNAPSHOT'
 	implementation 'org.springframework.ai:spring-ai-azure-openai-spring-boot-starter'
 
+	implementation "me.paulschwarz:spring-dotenv:3.0.0"
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
