--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
 	//implementation 'org.springframework.ai:spring-ai-openai:1.0.0-SNAPSHOT'
 	implementation 'org.springframework.ai:spring-ai-azure-openai-spring-boot-starter'
+	implementation "me.paulschwarz:spring-dotenv:3.0.0"
 
 	implementation "me.paulschwarz:spring-dotenv:3.0.0"
 
