chore: spring 설정 변경 - datasource 설정까지 env에 추가 - .env 로 주입받는 설정은 application.yml 로 이동

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ SPRING_AI_AZURE_OPENAI_DEPLOYMENT_NAME=
 SPRING_AI_AZURE_OPENAI_MODEL_NAME=
 
 VWORLD_API_KEY=
+
+DATASOURCE_URL=
+DATASOURCE_USERNAME=
+DATASOURCE_PASSWORD=
