--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,28 @@ spring:
   thymeleaf:
     prefix: "classpath:/templates/"
     suffix: ".html"
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: ${DATASOURCE_URL}
+    username: ${DATASOURCE_USERNAME}
+    password: ${DATASOURCE_PASSWORD}
+  ai:
+    azure:
+      openai:
+        api-key: ${SPRING_AI_AZURE_OPENAI_API_KEY}
+        endpoint: ${SPRING_AI_AZURE_OPENAI_ENDPOINT}
+        chat:
+          options:
+            deployment-name: ${SPRING_AI_AZURE_OPENAI_DEPLOYMENT_NAME}
+            model-name: ${SPRING_AI_AZURE_OPENAI_MODEL_NAME}
+app:
+  vworld:
+    key: ${VWORLD_API_KEY}
 
 server:
   port: 8082
+
+
 
 ---
 
